--- a/mysite/chat/templates/index.html
+++ b/mysite/chat/templates/index.html
@@ -80,7 +80,7 @@
         <div class="upper">
         {{ request.user }} is already logged in.
         <h1> You are already logged in Chat </h1>
-        <button class="but" onclick="window.location.href='/chat'">Go to Chat</button>
+        <button class="but" onclick="window.location.href='/chat/global'">Go to Chat</button>
             <p><span><a class="small" href="{% url 'logout' %}" >logout</a></span>
         </div>
     {% endif %}
