--- a/mysite/chat/templates/room.html
+++ b/mysite/chat/templates/room.html
@@ -34,6 +34,7 @@
         <p><span><a class="header" href="{% url 'logout' %}" >Logout</a></span></p>
     </div>
 
+
             What chat room would you like to enter?<br>
     <input id="room-name-input" type="text" size="100"><br>
     <input id="room-name-submit" type="button" value="Enter">
@@ -58,12 +59,28 @@
 <p></p>
 <p></p>
 <p></p>
-    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
-    <input id="chat-message-input" type="text" size="100"><br>
+    <textarea id="chat-log" cols="100" rows="20" readonly></textarea><br>
+    <input id="chat-message-input" type="text" size="100" placeholder="Enter text here"><br>
     <input id="chat-message-submit" type="button" value="Send">
+
+{% comment %} Get data for username and chatbox name{% endcomment %}
+    {{ request.user.username|json_script:"user_username" }}
     {{ room_name|json_script:"room-name" }}
     <script>
-        const roomName = JSON.parse(document.getElementById('room-name').textContent);
+        const user_username = "{{ user.username }}";
+        const user_id = "{{ user.id }}";
+        const roomName = "{{ room_name }}";
+        console.log('user_name:',user_username,'\nuser_id: ', user_id, '\nroomName: ', roomName);
+
+        document.querySelector('#chat-message-submit').onclick = function(e) {
+            const messageInputDom = document.querySelector('#chat-message-input');
+            const message = messageInputDom.value;
+            chatSocket.send(JSON.stringify({
+                'message': message,
+                'username': user_username
+            }));
+            messageInputDom.value = '';
+        };
 
         const chatSocket = new WebSocket(
             'ws://'
@@ -73,10 +90,18 @@
             + '/'
         );
 
-        chatSocket.onmessage = function(e) {
-            const data = JSON.parse(e.data);
-            document.querySelector('#chat-log').value += (data.message + '\n');
-        };
+        chatSocket.onmessage = function (e) {
+            const currentdate = new Date();
+            const datetime = "\t"
+                + currentdate.getHours() + ":"
+                + currentdate.getMinutes() + " | "
+                + currentdate.getDate() + "/"
+                + (currentdate.getMonth()+1)  + "/"
+                + currentdate.getFullYear();
+          const data = JSON.parse(e.data);
+          document.querySelector('#chat-log').value += ( data.username +": " + data.message +" "+datetime +'\n');
+       }
+
 
         chatSocket.onclose = function(e) {
             console.error('Chat socket closed unexpectedly');
@@ -89,14 +114,6 @@
             }
         };
 
-        document.querySelector('#chat-message-submit').onclick = function(e) {
-            const messageInputDom = document.querySelector('#chat-message-input');
-            const message = messageInputDom.value;
-            chatSocket.send(JSON.stringify({
-                'message': message
-            }));
-            messageInputDom.value = '';
-        };
     </script>
 
     </body>
