--- a/mysite/chat/templates/chat/room.html
+++ b/mysite/chat/templates/chat/room.html
@@ -1,33 +1,69 @@
-<!-- chat/templates/chat/room.html -->
 <!DOCTYPE html>
-<html lang="">
-<head>
-    <meta charset="utf-8"/>
-    <title>Chat Room</title>
-</head>
-<body>
+<html lang="un-US">
+    <head>
+        <meta charset="utf-8">
+        <title>Chat_room_</title>
+        <style>
+
+        .header{
+            margin-right: 20px;
+            font-size: 18px;
+            width: 100%;
+            text-align: right;
+            margin-top: 20px;
+        }
+        .header a{
+            color: black;
+            font-size: 15px;
+            margin-right: 20px;
+        }
+        .user{
+            margin-right: 20px;
+            color: green;
+        }
+
+        </style>
+    </head>
+    <body>
+
+{#    # logout#}
+    <div class="header">
+        Hello in our chat,
+        <span class="user">{{ request.user }}</span>
+        <p><span><a class="header" href="{% url 'logout' %}" >Logout</a></span></p>
 
 
-
-<div className="container">
-    <div className="row d-flex justify-content-center">
-        <div className="col-3">
-            <form>
-                <div className="form-group">
-                    <label htmlFor="exampleFormControlTextarea1" className="h4 pt-5">Chatbox</label>
-                    <textarea className="form-control" id="chat-log" readOnly rows="10"></textarea><br>
-                </div>
-                <div className="form-group">
-                    <input id="chat-message-input" className="form-control" placeholder="Enter text here" type="text"></br>
-                </div>
-                <input id="chat-message-submit" className="btn btn-primary btn-lg btn-block" type="button" value="Send">
-            </form>
-        </div>
     </div>
-</div>
+<h1 style="text-align: left" >You are in <span style="color: crimson">{{ room_name }}</span> room.</h1><p>
+            What chat room would you like to enter?<br>
+    <input id="room-name-input" type="text" size="100"><br>
+    <input id="room-name-submit" type="button" value="Enter">
 
+    <script>
+        document.querySelector('#room-name-input').focus();
+        document.querySelector('#room-name-input').onkeyup = function(e) {
+            if (e.keyCode === 13) {  // enter, return
+                document.querySelector('#room-name-submit').click();
+            }
+        };
 
-    {% comment %} Get data for username and chatbox name{% endcomment %}
+        document.querySelector('#room-name-submit').onclick = function(e) {
+            var roomName = document.querySelector('#room-name-input').value;
+            window.location.pathname = '/chat/' + roomName + '/';
+        };
+    </script>
+<!-- chat/templates/chat/room.html -->
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+    <textarea id="chat-log" cols="100" rows="20" readonly></textarea><br>
+    <input id="chat-message-input" type="text" size="100" placeholder="Enter text here"><br>
+    <input id="chat-message-submit" type="button" value="Send">
+
+{% comment %} Get data for username and chatbox name{% endcomment %}
     {{ request.user.username|json_script:"user_username" }}
     {{ room_name|json_script:"room-name" }}
     <script>
@@ -80,5 +116,5 @@
 
     </script>
 
-</body>
+    </body>
 </html>
